# rag

./: README.md  pyproject.toml  requirements.txt
rag/: app.py
