[project]
name = "rag"
version = "0.1.0"
description = ""
authors = [
    {name = "洪翌誠",email = "henry3556108@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "langchain (>=0.3.18,<0.4.0)",
    "langchain-community (>=0.3.17,<0.4.0)",
    "langchain-experimental (>=0.3.4,<0.4.0)",
    "streamlit (>=1.42.0,<2.0.0)",
    "pdfplumber (>=0.11.5,<0.12.0)",
    "semantic-chunkers (>=0.0.10,<0.0.11)",
    "open-text-embeddings (>=1.0.4,<2.0.0)",
    "ollama (>=0.4.7,<0.5.0)",
    "prompt-template (>=1.2.0,<2.0.0)",
    "sentence-transformers (>=3.4.1,<4.0.0)",
    "faiss-cpu (>=1.10.0,<2.0.0)"
]


packages = ["."]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
